# codex-science

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  PROJECT.md  README.ko.md  README.md  pyproject.toml
.ci/: failing-tests.txt  reference-audit.json
.codex-plugin/: plugin.json
authored-skills/: README.md
catalog/: inventory.json  native-skill-policy.json  policy.json  source.json  sources.json
connectors/: authenticated.example.toml  eqtl-catalogue-releases.json  public.json
docs/: ANALYTICAL_SOURCES.md  BENCHMARKS.md  CHANGELOG.md  CHECKPOINTS.md  COMPUTE.md  CONFIGS.md  DATA.md  DEBUGGING.md  EVALUATION.md  EXPERIMENTS.md  IMPLEMENTATION_STATUS.md  LIFE_SCIENCE_RESEARCH_SOURCES.md  LOGGING.md  MODEL.md  NATIVE_RUNTIME_QUICKSTART.md  NATIVE_SKILL_STANDARD.md  PLATFORM_CONTRACTS.md  QUANTITATIVE_RESEARCH_RELEASE_NOTES.md  QUANTITATIVE_RESEARCH_RUNTIME.md  REFERENCE_CONTRACT.md  REPRODUCIBILITY.md  ROADMAP.md  SETUP.md  TEXTBOOK_SOURCES.md  TRAINING.md
hooks/: hooks.json
models/: registry-v2.json  registry.json
release/: manifest.json
scripts/: apply_complete_native_runtime_v4.py  audit_native_skill_maturity.py  audit_sbdd_benchmark.py  audit_skill_references.py  audit_skills.py  bootstrap.sh  candidate_contract_check.py  check.sh  check_dimensions.py  check_formal_proof.py  compute_probe.py  connector_action_contract.py  connector_drift_report.py  describe_artifact.py  diff_literature_review.py  diff_runs.py  doctor.sh  export_scientific_run.py  finalize_native_runtime_v4.py  generate_wrappers.py  harden_core_runtime_v4.py  harden_extended_runtime_v4.py  (+46 more)
(+1456 files in other folders)
